css/custom_styles.css
/* ... */
header#main-header .user {
    font-size: 0.83em;
    color: #656d71;
}
header#main-header .user bdi {
    color: #222;
}
header#main-header .user bdi:first-of-type {
    font-size: 1.2em;
}

header#main-header ul {
    text-align: right
}

header#main-header li {
    display: inline-block;
    margin:0
}

header#main-header a {
    font-size: 15px;
    line-height: 55px;
    padding-left: 20px;
    color: #0099e5
}

header#main-header a:hover {
    color: #32325d
}

header#main-header .button a:after {
    font: normal 16px StripeIcons;
    content: "\279D";
    padding-left: 5px
}

#loading-bar {
    background: #0099e5;
    height: 3px;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2000;
    transition: opacity .25s ease-in-out, width .4s ease-in-out;
    width: 0;
    transform-origin: 0 0;
    will-change: opacity, width
}

#edit-dash{
    padding-top: 130px;
    width: 160px;
    height: 500px;
    top: 0;
    vertical-align: top;
    display: inline-block;
}

#edit-dash li{
    border-bottom:1px solid #eee;
    margin:0;
    list-style: none;
}
#edit-dash li:last-child{
    border:none;
}

#edit-dash li p{
    display: inline-block;
    vertical-align: middle;
    padding-bottom: 5px;
    padding-left: 10px;
}
#edit-dash li i{
    margin-top:10px;
}

/*Overrides*/

.level1{
    margin:0;
}

nav h1{
    text-transform: uppercase;
    font-weight: 600;
    font-size: 18px;
}

.dokuwiki a.wikilink1,
.dokuwiki a.wikilink2:link,
.dokuwiki a.wikilink2:visited{
    display: inline-block;
    font-size: 15px;
    font-weight: 500;
    background-repeat: no-repeat;
    background-size: 20px 20px;
    background-position: 0 8px;
    border:none;
}

.dokuwiki a.wikilink1{
    color: #113769;
}
.dokuwiki a.wikilink2{
    color: #aa1818;
}

.dokuwiki .docInfo{
    padding:40px 0;
}

.dokuwiki label.block{
    text-align:center;
}

.centeralign fieldset legend{
    border:none;
}

.centeralign fieldset{
    margin:40px auto;
}

.level2 ul{
    padding: 10px;
}

.dokuwiki .secedit{
    margin-top:0;
}

.button.btn_secedit button:hover{
    color:#2b73b7;
    border-bottom: solid 1px #eee;
    border-top: solid 1px #eee;
}
.button.btn_secedit button{
    background: none;
    border: none;
    font-size: 15px;
    border-bottom: solid 1px #fff;
    border-top: solid 1px #fff;
    transition: all ease 200ms;

}

#dw__toc{
    background-color: #f5f7f9;
    margin: 0;
    width: 100%;
    padding: 10px 10px;
    border: solid #eee 1px!important;
    border-left: solid 5px #0670c2!important;
    float:none;
    font-size:15px;
    -webkit-box-shadow: 0 1px 5px 0 rgba(0,0,0,.07), 0 7px 17px 0 rgba(0,0,0,.1);
    -moz-box-shadow: 0 1px 5px 0 rgba(0,0,0,.07), 0 7px 17px 0 rgba(0,0,0,.1);
    box-shadow: 0 1px 5px 0 rgba(0,0,0,.07), 0 7px 17px 0 rgba(0,0,0,.1);
}

#dw__toc:not(:first-child) {
    margin-top: 1.2em;
}

#dw__toc a{
    font-size:15px!important;
}

#dw__toc > div {
    padding-top: 0.2em;
}

#dw__toc ul li div.li {
    padding: .5em 0;
}

#dw__toc h3{
    font-size:22px;
    margin-top: 0;
}

.dokuwiki #admin__version {
    float: left;
    padding-top: 50px;
}

.dokuwiki ul.admin_tasks{
    padding-top:40px;
}

#config__manager td.label{
    border:none;
    display: table-cell;
    height:100%;
    width:100%;
}

#config__manager td.label label{
    color:#000;
    white-space: initial;
    line-height: 1.5em;
}

#config__manager fieldset{
    margin:0;
}

.dokuwiki div.table{
    overflow-x:visible;
}

#config__manager tr.default input{
    background:#e5f6ff;
    padding: 0.2em .5em;
}
#config__manager tr.default .input{
    background:transparent;
}

#config__manager td input.edit,
#config__manager tr.default .input,
#config__manager tr .input{
    width: 300px;
    margin: 10px;
}
#config__manager fieldset {
    background-color: #f5f7f9;
}
#config__manager legend{
    border:none;
}
#config__manager fieldset td.value{
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 7.5px;
}

#config__manager p{
    margin-top:10px;
}
#plugin__styling input{border:none;padding: .2em .5em;}
#plugin__styling td{
    padding: .2em .5em;
}

.dokuwiki div.breadcrumbs .bchead{
    font-weight:bold;
}
.dokuwiki div.breadcrumbs {
    border-top: none;
    border-bottom: 1px solid #e5f6ff;
    margin-bottom: 2.5em;
    padding: 10px 0;
}
.dokuwiki div.breadcrumbs ul {
    margin-bottom: 0;
}

.dokuwiki a.wikilink1:hover, .dokuwiki a.wikilink2:hover{
    text-decoration:underline;
}

.dokuwiki span.curid a{
    font-weight:normal;
}

#content-wrapper .level1{
    margin:0;
}

/*Responsive Styles*/
@media (max-width: 1100px) {
    #edit-dash {
        width:50px;
    }
    #edit-dash ul li{
        margin:0;
        border-bottom:none;
    }
    #edit-dash ul li a p{
        display:none;
    }
}

